refactor: consolidate async and sync into lib.rs
Remove separate async and sync modules by consolidating both
implementations directly into lib.rs with conditional compilation.
Change default features to empty, making async and sync mutually
exclusive to prevent configuration conflicts. Update documentation to
reflect the new feature requirements and module structure.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ tokio = { version = "1.49", features = ["fs"], optional = true }
 tokio = { version = "1.49", features = ["fs", "macros", "rt"] }
 
 [features]
-default = ["sha256", "async"]
+default = []
 async = ["dep:tokio"]
 sync = []
 sha224 = []
