build: update edition and add package metadata
Update Rust edition from 2021 to 2024 and add comprehensive package
metadata including author, license, description, repository links, and
keywords to improve discoverability and documentation.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,16 @@
 [package]
 name = "sha2_hasher"
 version = "0.2.0"
-edition = "2021"
+edition = "2024"
+authors = ["kaoru <k@warpnine.io>"]
+license = "MIT"
+description = "A trait extension for hashing files with SHA-2 algorithms"
+homepage = "https://github.com/0x6b/sha2_hasher"
+repository = "https://github.com/0x6b/sha2_hasher"
+documentation = "https://docs.rs/sha2_hasher"
+readme = "README.md"
+keywords = ["sha2", "sha256", "hash", "file", "digest"]
+exclude = ["tests/"]
 
 [dependencies]
 const-hex = { version = "1" }
