--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,3 +24,6 @@ tokio = { version = "1.49", features = ["fs", "macros", "rt"] }
 default = []
 async = ["dep:tokio"]
 sync = []
+
+[package.metadata.docs.rs]
+features = ["async"]
